# c-template

./: .gitignore  CMakeLists.txt  common.cmake  mod.ts
deno-ts/: deps.ts  grantSource.ts  map.ts  pre-commit.ts  test.ts
include/: _lib.h  ctemplate.h
source/: ctemplate.cpp
test/: CMakeLists.txt
test/source/: main.cpp
